infrastructure/kubernetes/tendersbay-xyz/platform/canary/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-canary-svc
  namespace: tendersbay-xyz
spec:
  type: NodePort
  selector:
    app: tendersbay-xyz
    tier: platform-canary
  ports:
    - port: 30081
      targetPort: 8080
      protocol: TCP
